test/files/neg/t2462c.check
t2462c.scala:24: error: No C of X$Y
  f[X$Y]
   ^
t2462c.scala:30: error: No C of Foo[Int]
  f[Foo[Int]]
   ^
t2462c.scala:33: error: No C of Foo[Int]
  g[Foo[Int]]
   ^
t2462c.scala:36: error: I see no C[Foo[Int]]
  h[Foo[Int]]
   ^
t2462c.scala:40: error: String List[?] List[C[_]] Int Option[Long] -- .
  i.m[Option[Long]]
     ^
5 errors found
